overflow issue fixed in .trainTimetableContainer

--- a/src/styles/trainTimetable.scss
+++ b/src/styles/trainTimetable.scss
@@ -1,10 +1,10 @@
 @import "colors";
 
 .trainTimetableContainer {
-  height: 70vh;
+  height: 80vh;
   width: 100%;
   max-width: 900px;
-  overflow-x: scroll;
+  //   overflow-x: scroll;
   // background-color:rgb(55, 164, 207); //before giving color we have to give height and width first
 
   form {
